--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,17 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <!-- Google Tag Manager -->
+    <meta name="gtmScript" content="">
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;j.addEventListener('load', function() {
+    var _ge = new CustomEvent('gtm_loaded', { bubbles: true });
+      d.dispatchEvent(_ge);
+    });f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-TD953FK');</script>
+    <!-- End Google Tag Manager -->
   </head>
   <body>
     <noscript>
